--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     align-items:center;
     justify-content: space-evenly;
     height:80vh;
-    width: 28vw;
+    width:25%;
     background-color: lightblue;
     border: lightcoral solid 7px;
     border-radius: 10px;
