--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: beige;
+    background-color: rgb(197, 197, 145);
 
 }
 
@@ -20,9 +20,9 @@ body{
     justify-content: space-evenly;
     height:80vh;
     width:54vh;
-    background-color: lightblue;
-    border: lightcoral solid 7px;
-    border-radius: 10px;
+    background-color: rgb(82, 78, 78);
+    border: black solid 3px;
+    border-radius: 25px;
     flex-direction: column;
     
 
@@ -33,20 +33,24 @@ body{
     }
 }
 #display{
-    background-color:lightgreen;
+    background-color:rgb(178, 238, 178);
     height: 10vh;
     width: 90%;
-    border: black solid 5px;
-    border-radius: 10px;
+    border: rgb(41, 40, 40) solid 4px;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    margin-top: 10px;
     
 }
 #buttonContainer{
     display: grid;
     height: 50vh;
     width:90%;
+    border-top: rgb(37, 37, 37) solid 4px;
+    border-radius: 9px;
+    padding: 5px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-gap: 10px;
@@ -61,14 +65,24 @@ body{
     border: black solid 1px;
     border-radius: 10px;
     font-size: large;
+}
+.button:hover{
+    filter: brightness(90%);
+} 
+.button:active{
+    filter: brightness(80%);
+
+}
   
     
-}
+
 #delete{
     grid-area: delete;
+    background-color: tomato;
 }
 #clear{
     grid-area: clear;
+    background-color: lightblue;
 }
 #button9{
     grid-area: button9;
@@ -101,18 +115,23 @@ body{
 }
 #plusButton{
     grid-area: plus;
+    background-color: rgb(236, 207, 152);
 }
 #minus{
     grid-area: minus;
+    background-color: rgb(236, 207, 152);
 }
 #division{
     grid-area: division;
+    background-color: rgb(236, 207, 152);
 }
 #multiply{
     grid-area: multi;
+    background-color: rgb(236, 207, 152);
 }
 #equal{
     grid-area: equal;
+    background-color: rgb(236, 170, 144);
 }
 #currentValue{
     margin-top: 0px;
